updated pre-commit command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "prettier": "prettier --write src/**/*.{ts,js,scss,html}",
     "lint": "ng lint",
-    "prepare": "husky install"
+    "pre-commit": "lint-staged"
   },
   "private": true,
   "dependencies": {
@@ -50,7 +50,18 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
+    "simple-git-hooks": "^2.8.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.9.4"
+  },
+  "lint-staged": {
+    "*.{ts,html,js,scss}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.scss": "prettier --write"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run pre-commit"
   }
 }
