Added email verify API call

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "typescript": "~4.9.4"
   },
   "lint-staged": {
-    "*.{ts,html,js,scss}": [
+    "*.{ts,html,js}": [
       "prettier --write",
       "eslint --fix"
     ],
