--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "prettier": "prettier --write src/**/*.{ts,js,scss,html}",
     "lint": "ng lint",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "start:stage": "ng serve --port 4300 --ssl false --disable-host-check"
   },
   "private": true,
   "dependencies": {
