--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/router": "^15.2.0",
     "@ng-idle/core": "^11.1.0",
     "@ng-idle/keepalive": "^11.0.3",
+    "chart.js": "^4.2.1",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
