--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rxjs": "~7.8.0",
     "to-words": "^3.6.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
